Исправление ошибок Problems